fix : z-index for sorting & view options

--- a/sarakel/src/HomePage/Components/content/content.module.css
+++ b/sarakel/src/HomePage/Components/content/content.module.css
@@ -31,6 +31,7 @@
     border-radius: 50px;
     width: 70px;
     height: 28px;
+    z-index: 9;
   }
   
   .content-view-type {
@@ -42,6 +43,7 @@
     border-radius: 50px;
     width: 50px;
     height: 24px;
+    z-index: 9;
   }
   
   .content-sort-type:hover, .content-view-type:hover {
